--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Jeremy Dahan",
   "license": "MIT",
   "dependencies": {
-    "execa": "^4.0.0"
+    "execa": "^4.0.0",
+    "path": "^0.12.7"
   }
 }
