--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "execa": "^4.0.0",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "jsdoc-to-markdown": "^7.1.0"
   }
 }
