--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A very basic nodejs wrapper around the zpaq cli",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Jeremy Dahan",
   "license": "MIT",
@@ -13,7 +13,11 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "jsdoc-to-markdown": "^7.1.0"
+    "@types/jest": "^27.0.2",
+    "fs-extra": "^10.0.0",
+    "jest": "^27.3.1",
+    "jsdoc-to-markdown": "^7.1.0",
+    "moment": "^2.29.1"
   },
   "repository": {
     "type": "git",
